--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="tab_text_2">Tab 2</string>
     <string name="tab_text_3">Tab 3</string>
     <string name="placeholder">placeholder</string>
+
+    <string name="world_1">World 1</string>
+    <string name="world_2">Skyblock</string>
 </resources>
